site/assets/css/flexi_form.css
/*******************************
 * Input / select / form styling
 *******************************/

.flexicontent :not(.input-prepend):not(.input-append) > input[type="text"] {
	font-size:11px;
	display: inline-block;
	/*float: none;*/ /* problem with ... */
	margin: 1px 2px 1px 3px;
	padding: 4px 2px 5px;
	border-radius: 4px;
}
.flexicontent select {
	font-size: 12px;
	display: inline-block;  /* important causes problem hidden elements */
	/*float: none;*/ /* problem with ... */
	margin: 1px 2px 1px 3px;
	padding: 2px 2px;
	border-radius: 4px;
	height: auto;
}
.flexicontent textarea, .flexicontent fieldset.radio {
	margin: 1px 2px 1px 3px;
}
.flexicontent form {
	margin: 0px;
	padding: 0px;
}

/********************************
 * Label and property field boxes
 ********************************/
/*#flexicontent .label, .flexicontent .label {
	display: inline-block;
	margin-right: 12px;
}*/

#flexicontent .nowrap_box, .flexicontent .nowrap_box {
	white-space: nowrap !important;
	display: inline-block;
	float: none;
	vertical-align: top !important;
}
#flexicontent .nowrap_box .label, .flexicontent .nowrap_box .label {
	vertical-align: top !important;
}
#flexicontent .filterbuttons_head .nowrap_box .label, .flexicontent .filterbuttons_head .nowrap_box .label {
	vertical-align: middle !important;
}



/*****************************************
 * Checkbox / Radio styling (and hide them)
 *****************************************/

/* Labels with these classes must have input/select placed inside them */

#flexicontent .fcradiocheckimage label.fccheckradio_lbl {
	vertical-align:unset !important;
}
label.fccheckradio_lbl,
span.fcselect_lbl {
	display:inline-block;
	white-space:nowrap;
	padding-right: 8px;
	min-width:0px;
	margin: 0px 0px 0px 2px;
	float: none;
	clear: none;
}


/* J3.x styles for radio button sets */

.flexicontent span.radio {
	white-space: normal !important;
	display: inline-block !important;
	padding: 0px !important;
}

.flexicontent label.radio {
	white-space: nowrap !important;
	width: auto !important;
	display: inline-block !important;
	padding: 0px 4px 0px 0px !important;
	margin: 0px !important;
}


/* !! Negation selector :not(...) is that in browsers (ie8) that do not support these CSS rules, we will have a good fallback appearance */

/* Hide input field, but exclude input inside labels (Graceful fallback) */

input[type="checkbox"].fc_checkradio,
input[type="radio"].fc_checkradio,
[name="adminForm"] input[type="checkbox"]:not(.skip_fccr),
[name="adminForm"] input[type="radio"]:not(.skip_fccr),
.flexicontent input[type="checkbox"]:not(.skip_fccr),
.flexicontent input[type="radio"]:not(.skip_fccr) {
	width: 24px !important;
	/*width: 19px !important;*/
	margin: 0 !important;
	padding: 0 !important;
	opacity: 0 !important;
	display: none !important;
}
div input[type="checkbox"][name^="cid"],
div input[type="checkbox"]:only-child,
label input[type="checkbox"].fc_checkradio,
label input[type="radio"].fc_checkradio,
[name="adminForm"] label input[type="checkbox"]:not(.skip_fccr),
[name="adminForm"] label input[type="radio"]:not(.skip_fccr),
.flexicontent label input[type="checkbox"]:not(.skip_fccr),
.flexicontent label input[type="radio"]:not(.skip_fccr) {
	width: auto !important;
	margin: 3px 3px 0px 0px !important;
	padding: auto !important;
	opacity: inherit !important;
	display: inline !important;
	vertical-align:bottom !important;
}


/* Style the label to also include the nice checkbox, radio */

input[type="checkbox"].fc_checkradio + label:not(.plupload_button):not(.btn),
input[type="radio"].fc_checkradio + label:not(.plupload_button):not(.btn),
[name="adminForm"] input[type="checkbox"] + label:not(.plupload_button):not(.btn),
[name="adminForm"] input[type="radio"] + label:not(.plupload_button):not(.btn),
.flexicontent input[type="checkbox"] + label:not(.plupload_button):not(.btn),
.flexicontent input[type="radio"] + label:not(.plupload_button):not(.btn) {
	display: inline-block !important;
	margin: 1px 12px 1px 0px !important;
	padding: 0px 0px 0px 24px !important;
	line-height: 22px !important;
	height: 22px !important;
	text-align: left !important;
	min-width: 1px !important;
	cursor: pointer !important;
	color: #333;
	/*margin-left: -19px !important;
	padding-left: 19px !important;
	line-height: 19px !important;
	height: 19px !important;*/
}
input[type="checkbox"].fc_checkradio:disabled + label:not(.plupload_button):not(.btn),
input[type="radio"].fc_checkradio:disabled + label:not(.plupload_button):not(.btn),
[name="adminForm"] input[type="checkbox"]:not(.skip_fccr):disabled + label:not(.plupload_button):not(.btn),
[name="adminForm"] input[type="radio"]:not(.skip_fccr):disabled + label:not(.plupload_button):not(.btn),
.flexicontent input[type="checkbox"]:not(.skip_fccr):disabled + label:not(.plupload_button):not(.btn),
.flexicontent input[type="radio"]:not(.skip_fccr):disabled + label:not(.plupload_button):not(.btn) {
	background-position: 0 -72px !important;
	font-style: italic !important;
	color: gray !important;
	cursor: normal !important;
	/*background: url(../images/checks2.png) no-repeat 0 0 !important;*/
}
input[type="checkbox"].fc_checkradio + label:not(.plupload_button):not(.btn),
[name="adminForm"] input[type="checkbox"] + label:not(.plupload_button):not(.btn),
.flexicontent input[type="checkbox"] + label:not(.plupload_button):not(.btn) {
	background: url(../images/checks.png) no-repeat 0 0 !important;
	/*background: url(../images/checks2.png) no-repeat 0 0 !important;*/
}
input[type="radio"].fc_checkradio + label:not(.plupload_button):not(.btn),
[name="adminForm"] input[type="radio"] + label:not(.plupload_button):not(.btn),
.flexicontent input[type="radio"] + label:not(.plupload_button):not(.btn) {
	background: url(../images/checks.png) no-repeat 0 0 !important;
	/*background: url(../images/checks2.png) no-repeat 0 -38px !important;*/
}
/* ... */

